src/objects/Lead/fields/Recent_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion_Date__c</fullName>
    <label>Recent Conversion Date</label>
    <type>DateTime</type>
</CustomField>